--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+a{
+  text-decoration:none;
+}
+a:visited{
+  color:inherit;
+}
+*{
+  margin:0;
+  user-select:none;
+}
+html{
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+#header{
+  background-color:rgb(206, 24, 24);
+  width:auto;
+  height:6.5vh;
+  display:flex;
+  align-items:center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size:4vh;
+  color:white;
 }
 
-.App-link {
-  color: #61dafb;
+#content{
+  width:auto;
+  height:auto;
+  height:90vh;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#footer{
+  background-color:rgb(206, 24, 24);
+  width:auto;
+  color:white;
+  height:3.5vh;
+  display:flex;
+  align-items:center;
+  justify-content: center;
+  font-size:2vh;
 }
