--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ a:visited{
 *{
   margin:0;
   user-select:none;
+  font-size:2.5vh;
 }
 html{
   font-family: 'Roboto Condensed', sans-serif;
@@ -39,4 +40,25 @@ html{
   align-items:center;
   justify-content: center;
   font-size:2vh;
+}
+.centerMe{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap:5%;
+}
+.mainScreen{
+  height:86vh;
+}
+
+h1{
+  font-size:7vh;
+}
+.scoreBoard{
+  width:auto;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  gap:5%;
 }
