--- a/src/Components/GameHandler.css
+++ b/src/Components/GameHandler.css
@@ -4,4 +4,16 @@
     padding:4%;
     justify-content: center;
     align-items: center;
+    gap:3%;
+    height:65vh;
+    
+}
+
+.gameCard{
+    padding:1%;
+    transition:all 0.2s;
+    box-shadow: 5px 5px 10px 2px rgba(0,0,0,.3);
+}
+.gameCard:hover{
+    transform:translateY(-3%)
 }
