--- a/src/Components/Card.css
+++ b/src/Components/Card.css
@@ -1,7 +1,8 @@
 .cardContainer{
     box-sizing: border-box;
-    width:25vh;
+    width:20vh;
     padding:1%;
+    font-size:1rem;
 }
 .cardPic{
     width:100%;
