--- a/src/Components/GameHandler.css
+++ b/src/Components/GameHandler.css
@@ -1,12 +1,10 @@
 #gameCardContainer{
     display:flex;
     flex-wrap: wrap;
-    padding:4%;
     justify-content: center;
     align-items: center;
     gap:3%;
-    height:65vh;
-    
+    width:100vw;
 }
 
 .gameCard{
